# ros-follow-red-cube-package

./: CMakeLists.txt  package.xml
src/scripts/: follow_red_cube.cpp  image_listener.cpp
urdf/: red_cube.urdf
